--- a/crm-graphql/package.json
+++ b/crm-graphql/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.17.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql-import": "^1.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.5",
     "prettier": "^2.1.1"
   }
 }
